<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/item_background"
    android:layout_marginTop="10dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/surname"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:minHeight="48dp"
        android:minWidth="50dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnDelete"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:contentDescription="Deletes User"
        android:src="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@id/btnDelete"
        app:layout_constraintEnd_toEndOf="@id/btnDelete"
        app:layout_constraintStart_toStartOf="@id/btnDelete"
        app:layout_constraintTop_toTopOf="@id/btnDelete" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnUpdate"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:contentDescription="Updates Existing User"
        android:src="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDelete" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="@id/btnUpdate"
        app:layout_constraintEnd_toEndOf="@id/btnUpdate"
        app:layout_constraintStart_toStartOf="@id/btnUpdate"
        app:layout_constraintTop_toTopOf="@id/btnUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>